--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,50 @@
     transform: rotate(360deg);
   }
 }
+.row-headcomp-almabetter{
+  height: 120px;
+}
+#content-container{
+  background-color: #f8F8F8;
+}
+.container-outer{
+  background-color: rgb(255, 255, 255);
+  /* width: 100vmax; */
+  height: 100vh;
+}
+#under_menu_line {
+  margin-top:3px;
+}
+#currency{
+  width: 60px;
+  margin-top: 1px;
+  height: 35px;
+  border-radius: 7px;
+}
+#changes{
+  text-align: center;
+  
+}
+.matketcap{
+  color: grey;
+  font-size: 18px;
+  font-family: 'DM Sans';
+
+}
+tr.bordered{
+  border-bottom: 1px solid #000;
+}
+.tdheight{
+  height: 80px;
+  align-items:  center;
+  
+}
+.tablehead{
+  font-weight: bold;
+  font-size: large;
+  color:#1a0000
+}
+
+#maincontainer{
+  background-color: #954c4c;
+}
